RESOLVED FIXED135102
Crashes seen in wheel event handling
https://bugs.webkit.org/show_bug.cgi?id=135102
Summary Crashes seen in wheel event handling
Darin Adler
Reported 2014-07-20 10:39:38 PDT
Crashes seen in wheel event handling
Attachments
Patch (9.18 KB, patch)
2014-07-20 10:41 PDT, Darin Adler
no flags
Patch (9.84 KB, patch)
2014-07-20 10:44 PDT, Darin Adler
bdakin: review+
Darin Adler
Comment 1 2014-07-20 10:41:40 PDT
Darin Adler
Comment 2 2014-07-20 10:42:28 PDT
Darin Adler
Comment 3 2014-07-20 10:44:53 PDT
Darin Adler
Comment 4 2014-07-20 12:56:05 PDT
Comment on attachment 235187 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235187&action=review > Source/WebCore/page/EventHandler.cpp:2578 > + // Instead, the handlers should know convert vertical scrolls appropriately. Oops, typo here. Should be "how to convert".
Beth Dakin
Comment 5 2014-07-20 12:57:00 PDT
Comment on attachment 235187 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235187&action=review > Source/WebCore/page/mac/EventHandlerMac.mm:850 > + // FIXME: I don't understand the lifetime guarantee for this data member. I think this is a great question, but it feels little oddly phrased as a comment in the context of other WebKit comments. Maybe it's fine, but I think you could also just have: FIXME: What prevents us from deleting this scrollable container while still holding a pointer to it?
Darin Adler
Comment 6 2014-07-20 13:12:16 PDT
Note You need to log in before you can comment on or make changes to this bug.